[package]
name = "spo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bluer = "0.13.2"
btleplug = "0.9.1"
futures = "0.3.19"
humantime = "2.1.0"
log = "0.4.14"
simplelog = "0.11.2"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = [ "macros", "rt-multi-thread" ] }
